[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/LevelUp.gd" type="Script" id=1]
[ext_resource path="res://Scenes/LevelUpField.tscn" type="PackedScene" id=2]

[node name="LevelUp" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
script = ExtResource( 1 )

[node name="Rows" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 974.0
margin_bottom = 550.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Rows"]
margin_right = 924.0
margin_bottom = 14.0

[node name="RemainingPointsLabel" type="Label" parent="Rows/HBoxContainer"]
margin_right = 115.0
margin_bottom = 14.0
text = "Remaining Points:"

[node name="RemainingPointsValue" type="Label" parent="Rows/HBoxContainer"]
margin_left = 119.0
margin_right = 924.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "0"

[node name="StrengthLevelUpField" parent="Rows" instance=ExtResource( 2 )]
margin_top = 34.0
margin_right = 924.0
margin_bottom = 54.0
fieldName = "Strength"

[node name="HealthLevelUpField" parent="Rows" instance=ExtResource( 2 )]
margin_top = 74.0
margin_right = 924.0
margin_bottom = 94.0
fieldName = "Health"

[node name="SpeedLevelUpField" parent="Rows" instance=ExtResource( 2 )]
margin_top = 114.0
margin_right = 924.0
margin_bottom = 134.0
fieldName = "Speed"
[connection signal="decrease_pressed" from="Rows/StrengthLevelUpField" to="." method="_on_StrengthLevelUpField_decrease_pressed"]
[connection signal="increase_pressed" from="Rows/StrengthLevelUpField" to="." method="_on_StrengthLevelUpField_increase_pressed"]
[connection signal="decrease_pressed" from="Rows/HealthLevelUpField" to="." method="_on_HealthLevelUpField_decrease_pressed"]
[connection signal="increase_pressed" from="Rows/HealthLevelUpField" to="." method="_on_HealthLevelUpField_increase_pressed"]
[connection signal="decrease_pressed" from="Rows/SpeedLevelUpField" to="." method="_on_SpeedLevelUpField_decrease_pressed"]
[connection signal="increase_pressed" from="Rows/SpeedLevelUpField" to="." method="_on_SpeedLevelUpField_increase_pressed"]
